# Resolv

./: .env.example  .gitignore  ARCHITECTURE.md  ARIA.md  BUILD_JOURNAL.md  CITATION.cff  DEEP_UNDERSTANDING.md  HYPOTHESIS_LIBRARY.md  LICENSE  PHASE1_BUILD.md  README.md  Resolv Standalone.html  START_HERE.md  index.html  pyproject.toml  render.yaml  requirements.txt
data/: cost_matrix.yaml  godrej_complaints.xlsx  rag_index.json
data/sample/: synthetic_300.jsonl
docs/: PAPER_CLAIM_MAP.md  REPRODUCIBILITY.md  landed_readme_archive.md
docs/internal/: PHASE1_BUILD.md
eval/: aria_confidence_sweep.py  cfpb_second_domain.py  config.yaml  cost_aware_prompting.py  cost_sensitive_baseline.py  cost_sensitivity.py  gpt4o_expected_cost_cot.py  isolation_ablation.py  label_efficiency.py  lr_balanced_label_efficiency.py  nyc311_second_domain.py  plot_label_efficiency.py  plot_two_traps.py  resolution_time_validation.py  run_evaluation.py  run_paper_eval.py  threshold_sweep.py
eval/audit/: disagreements_for_review.csv  disagreements_for_review.xlsx
scripts/: anonymize_data.py  build_adjacency.py  create_schema.sql  ingest_rag_documents.py  load_complaints_xlsx.py  load_godrej_data.py  report_domain_other.py  report_eight_complaints.py  run_ambiguous_eval.py  run_ambiguous_eval_pipeline.py  run_ambiguous_pipeline.py  run_eval.py  run_full_experiment.py  run_missing_steps.py  run_paper_additional_experiments.py  sample_other_domain_titles.py  test_eight_complaints.py  update_paper_numbers.py  validate_classifier.py
src/: insights_queries.py
src/agents/: arbiter.py  (+3 more)
(+81 files in other folders)
