[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "resolv-aria"
version = "1.0.0"
description = "ARIA — Cost-Sensitive Complaint Routing under Asymmetric Risk"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.18.0",
    "groq>=0.11.0",
    "openai>=1.0.0",
    "langgraph>=0.2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
